css/style.css
/* ... */
.unscroll {
  overflow: hidden;
}

/* Index */
:root.index-loading .navLinks,
:root.index-loading .board,
:root.index-loading .pagelist {
  display: none;
}
#index-search {
  padding-right: 1.5em;
  width: 100px;
  transition: color .25s, border-color .25s, width .25s;
}
#index-search:focus,
#index-search[data-searching] {
  width: 200px;
}
#index-search-clear {
  color: gray;
  margin-left: -1.25em;
}
<% if (type === 'crx') { %>
/* ``::-webkit-*'' selectors break selector lists on Firefox. */
#index-search::-webkit-search-cancel-button,
<% } %>
#index-search:not([data-searching]) + #index-search-clear {
  display: none;
}
.summary {
  text-decoration: none;
}
.catalog-mode {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.catalog-thread {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 165px;
  margin-bottom: 5px;
  max-height: 320px;
  word-break: break-word;
}
.catalog-thread > a {
  flex-shrink: 0;
  position: relative;
}
.thumb {
  max-width: 150px;
  max-height: 150px;
  border-radius: 2px;
  box-shadow: 0 0 5px rgba(0, 0, 0, .25);
}
.thunb.spoiler-file {
  width: 100px;
  height: 100px;
}
.thumb.deleted-file {
  width: 127px;
  height: 13px;
  padding: 20px 11px;
}
.thumb.no-file {
  width: 77px;
  height: 13px;
  padding: 20px 36px;
}
.thread-icons {
  position: absolute;
  top: 1px;
  right: 1px;
}
.catalog-thread > a:not(:hover) .menu-button {
  display: none;
}
.thread-icons > .menu-button > i {
  font-size: 14px;
}
.thread-stats {
  flex-shrink: 0;
  cursor: help;
  font-size: 10px;
  font-weight: 700;
  line-height: .8;
  margin-top: 1px;
}
.catalog-thread .subject {
  flex-shrink: 0;
  font-weight: 700;
  line-height: 1;
  text-align: center;
}
.catalog-thread > .comment {
  flex-shrink: 1;
  overflow: hidden;
  text-align: center;
}

/* Announcement Hiding */
:root.hide-announcement #globalMessage,
:root.hide-announcement-enabled #toggleMsgBtn {
  display: none;
}
a.hide-announcement {
  float: left;
}

/* Unread */
#unread-line {
  margin: 0;
}

/* Thread Updater */
#updater:not(:hover) {
  background: none;
  border: none;
  box-shadow: none;
}
#updater > .move {
  padding: 0 3px;
}
#updater > div:last-child {
  text-align: center;
}
#updater input[type=number] {
  width: 4em;
}
#updater:not(:hover) > div:not(.move) {
  display: none;
}
#updater input[type="button"] {
  width: 100%;
}
.new {
  color: limegreen;
}

/* Thread Watcher */
#thread-watcher {
  max-width: 200px;
  min-width: 150px;
  padding: 3px;
  position: absolute;
}
#thread-watcher > div:first-child {
  display: flex;
  align-items: center;
}
#thread-watcher .move {
  flex: 1;
}
#watcher-status:not(:empty)::before {
  content: "(";
}
#watcher-status:not(:empty)::after {
  content: ")";
}
#watched-threads:not(:hover) {
  max-height: 150px;
  overflow: hidden;
}
#watched-threads div {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
#watched-threads .current {
  font-weight: 700;
}
#watched-threads a {
  text-decoration: none;
}
#watched-threads .dead-thread a[title] {
  text-decoration: line-through;
}

/* Thread Stats */
#thread-stats {
  background: none;
  border: none;
  box-shadow: none;
}

/* Quote */
.deadlink {
  text-decoration: none !important;
}
.backlink.deadlink:not(.forwardlink),
.quotelink.deadlink:not(.forwardlink) {
  text-decoration: underline !important;
}
.inlined {
  opacity: .5;
}
#qp input, .forwarded {
  display: none;
}
.quotelink.forwardlink,
.backlink.forwardlink {
  text-decoration: none;
  border-bottom: 1px dashed;
}
@supports (text-decoration-style: dashed) or (-moz-text-decoration-style: dashed) {
  .quotelink.forwardlink,
  .backlink.forwardlink {
    text-decoration: underline;
    -moz-text-decoration-style: dashed;
    text-decoration-style: dashed;
    border-bottom: none;
  }
}
.filtered {
  text-decoration: underline line-through;
}
.inline {
  border: 1px solid;
  display: table;
  margin: 2px 0;
}
.inline .post {
  border: 0 !important;
  background-color: transparent !important;
  display: table !important;
  margin: 0 !important;
  padding: 1px 2px !important;
}
#qp > .opContainer::after {
  content: '';
  clear: both;
  display: table;
}
#qp .post {
  border: none;
  margin: 0;
  padding: 2px 2px 5px;
}
#qp img {
  max-height: 80vh;
  max-width: 50vw;
}
.qphl {
  outline: 2px solid rgba(216, 94, 49, .7);
}

/* File */
.file-info:hover .fntrunc,
.file-info:not(:hover) .fnfull,
.expanded-image > .post > .file > .fileThumb > img[data-md5],
:not(.expanded-image) > .post > .file > .fileThumb > .full-image {
  display: none;
}
.expanding {
  opacity: .5;
}
.expanded-image {
  clear: both;
}
.expanded-image > .op > .file::after {
  content: '';
  clear: both;
  display: table;
}
:root.fit-height .full-image {
  max-height: 100vh;
}
:root.fit-width .full-image {
  max-width: 100%;
}
:root.gecko.fit-width .full-image {
  width: 100%;
}
#ihover {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  max-height: 100%;
  max-width: 75%;
  padding-bottom: 16px;
}

/* Index/Reply Navigation */
#navlinks {
  font-size: 16px;
  top: 25px;
  right: 10px;
}

/* Filter */
.opContainer.filter-highlight {
  box-shadow: inset 5px 0 rgba(255, 0, 0, .5);
}
.filter-highlight > .reply {
  box-shadow: -5px 0 rgba(255, 0, 0, .5);
}
.pinned .thumb,
.filter-highlight .thumb {
  border: 2px solid rgba(255, 0, 0, .5);
}

/* Thread & Reply Hiding */
.hide-thread-button,
.hide-reply-button {
  float: left;
  margin-right: 2px;
}
.stub ~ * {
  display: none !important;
}
.stub input {
  display: inline-block;
}

/* QR */
:root.hide-original-post-form #postForm,
:root.hide-original-post-form .postingMode,
:root.hide-original-post-form #togglePostForm,
#qr.autohide:not(.has-focus):not(:hover) > form {
  display: none;
}
#qr select, #dump-button, .remove, .captcha-img {
  cursor: pointer;
}
#qr > div {
  min-width: 300px;
  display: flex;
  align-items: center;
}
#qr .move {
  align-self: stretch;
  flex: 1;
}
/* ... */

